# extension-template

./: .gitmodules  .release-please-config.json  CLAUDE.md  CMakeLists.txt  Justfile  LICENSE  Makefile  README.md  büyü.patch  extension_config.cmake  out-of-tree-extension.Makefile  vcpkg.json
.cache/clangd/release/: compile_commands.json
.github/workflows/: ClientTests.yml  Deploy.yml  ExtensionTemplate.yml  Linux.yml  LinuxRelease.yml  MacOS.yml  MainDistributionPipeline.yml  NodeJS.yml  Python.yml  Windows.yml  _extension_deploy.yml  _extension_deploy_wasm.yml  release-please.yml
.github/workflows/reusable/: Linux.yml  MacOS.yml  Windows.yml
docs/: NEXT_README.md  README.md  UPDATING.md
scripts/: append_extension_metadata.py  bootstrap-template.py  extension-upload-wasm.sh  extension-upload.sh  set_extension_name.py  setup-custom-toolchain.sh
src/: CMakeLists.txt  boilerplate_extension.cpp  buffered_vmf_reader.cpp  duck_geoarrow_extension.cpp  quack_extension.cpp  serialize_vmf.cpp  unsigned  vmf_common.cpp  vmf_config.py  vmf_deserializer.cpp  vmf_enums.cpp  vmf_extension.cpp  vmf_functions.cpp  vmf_scan.cpp  vmf_serializer.cpp  waddle_extension.cpp
src/include/: boilerplate_extension.hpp  buffered_vmf_reader.hpp  duck_geoarrow_extension.hpp  quack_extension.hpp  vmf.json  vmf_common.hpp  vmf_deserializer.hpp  vmf_enums.hpp  vmf_enums.json  vmf_executors.hpp  vmf_extension.hpp  vmf_functions.hpp  vmf_scan.hpp  vmf_serializer.hpp  vmf_structure.hpp  vmf_transform.hpp  waddle_extension.hpp
src/vmf_functions/: CMakeLists.txt  copy_vmf.cpp  read_vmf.cpp  read_vmf_objects.cpp  vmf_array_length.cpp  vmf_contains.cpp  vmf_create.cpp  vmf_exists.cpp  vmf_extract.cpp  vmf_keys.cpp  vmf_merge_patch.cpp  vmf_pretty.cpp  vmf_serialize_plan.cpp  vmf_serialize_sql.cpp  vmf_structure.cpp  vmf_transform.cpp  vmf_type.cpp  vmf_valid.cpp  vmf_value.cpp
test/: README.md
test/nodejs/: boilerplate_test.js  quack_test.js
test/python/: boilerplate_test.py  quack_test.py
test/sql/: boilerplate.test  duck_geoarrow.test  quack.test  vmf.test  waddle.test
